<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1" >

            <EditText
                android:id="@+id/productName"
                style="@style/edits"
                android:layout_width="match_parent"
                android:ems="10"
                android:hint="@string/hint_product" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1" >

            <EditText
                style="@style/edits"
                android:inputType="numberDecimal"
                android:id="@+id/price"
                android:hint="@string/hint_price"
                android:layout_width="0dp"
                android:layout_weight=".50"  />

            <Spinner
                style="@style/spinners"
                android:id="@+id/method"
                android:layout_width="0dp"
                android:layout_weight=".50"  />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/datePicker"
                style="@style/edits"
                android:text="@string/button_date" />
            
             <TextView
                android:id="@+id/timePicker"
                style="@style/edits"
                android:text="@string/button_time" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp" >
            
                <Button
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_add" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_clear" />

        </LinearLayout>

    </LinearLayout>

     <TableRow
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:background="#ffffff">
      
            <TextView
                style="@style/textViews"
                android:text="@string/table_id"
                android:layout_weight="0"/>

            <TextView
                style="@style/textViews"
                android:layout_weight="0.3"
                android:text="@string/table_product"/>

            <TextView
                style="@style/textViews"
                android:text="@string/table_price"               
                android:layout_weight="0.2"/>
            
            <TextView
                style="@style/textViews"
                android:text="@string/table_method"
                android:layout_weight="0.3"/>
            
               <TextView
                style="@style/textViews"
                android:text="@string/table_date"
                android:layout_weight="0.2"/>

    </TableRow>
                   
			    <ScrollView
				  android:layout_width="fill_parent"
				  android:layout_height="match_parent"
				  android:background="#efefef" >
                
				    <TableLayout
				        android:id="@+id/results"
				        android:layout_width="match_parent"
				        android:layout_height="match_parent"
				        android:stretchColumns="1"
				        android:background="#ffffff">
				    </TableLayout>
				    
			    </ScrollView>
		    
</LinearLayout>